<resources>
    <string name="app_name">Aston_intensive_4</string>
    <string name="task_1">Task 1</string>
    <string name="task_2">Task 2</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button_fragment_b">Fragment B</string>
    <string name="button_fragment_c">Fragment C</string>
    <string name="button_fragment_a">Fragment A</string>
    <string name="hint_text_fragment_c">Text from Fragment B</string>
    <string name="button_fragment_d">Fragment D</string>
    <string name="hint_first_name">First name</string>
    <string name="hint_last_name">Last name</string>
    <string name="hint_phone">Phone</string>
    <string name="edit_button">Edit</string>
    <string name="cancel_button">Cancel</string>
    <string name="description_image_edit_photo">Edit your profile image</string>
</resources>