<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.EditContactFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:layout_marginBottom="100dp"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <ImageView
            android:id="@+id/image_edit_contact"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_gravity="center_vertical|center_horizontal"
            android:clickable="true"
            android:focusable="true"
            android:contentDescription="@string/description_image_edit_photo"
            tools:src="@drawable/unknown_person_man" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_marginHorizontal="10dp"
                android:gravity="center"
                android:orientation="vertical"

                tools:ignore="UselessParent">

                <EditText
                    android:id="@+id/edit_text_firstname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:layout_weight="1"
                    android:autofillHints=""
                    android:ems="10"
                    android:hint="@string/hint_first_name"
                    android:inputType="textCapSentences"
                    android:minHeight="48dp"
                    android:textColorHint="#8D6E63"
                    tools:ignore="VisualLintTextFieldSize" />

                <EditText
                    android:id="@+id/edit_text_lastname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:layout_weight="1"
                    android:autofillHints=""
                    android:ems="10"
                    android:hint="@string/hint_last_name"
                    android:inputType="textCapSentences"
                    android:minHeight="48dp"
                    android:textColorHint="#8D6E63"
                    tools:ignore="VisualLintTextFieldSize" />

                <EditText
                    android:id="@+id/edit_text_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:layout_weight="1"
                    android:autofillHints=""
                    android:ems="10"
                    android:hint="@string/hint_phone"
                    android:inputType="phone"
                    android:minHeight="48dp"
                    android:textColorHint="#8D6E63"
                    tools:ignore="VisualLintTextFieldSize" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:text="@string/edit_button"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/button_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/cancel_button"
                tools:ignore="ButtonStyle" />

        </LinearLayout>

    </LinearLayout>

</FrameLayout>